# tty-web

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  packages.txt
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  docs.yaml  release.yaml  tag.yaml
docs/: book.toml  sidebar-logo.js  theme.css
docs/src/: SUMMARY.md  api-reference.md  development.md  getting-started.md  introduction.md  sessions.md  wire-protocol.md
frontend/: app.js  index.html  style.css
src/: config.rs  lib.rs  main.rs  pty.rs  session.rs  terminal.rs
src/web/: health.rs  mod.rs  static_files.rs  ws.rs
