[package]
name = "tty-web"
version = "0.4.0"
edition = "2024"
description = "Web-based terminal emulator"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
nix = { version = "0.31", features = ["term", "fs", "signal"] }
rust-embed = "8"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
strip = true
