[package]
name = "tty-web"
version = "0.14.2"
edition = "2024"
description = "Web-based terminal emulator"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
nix = { version = "0.31", features = ["term", "fs", "signal"] }
rust-embed = "8"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
