[package]
name = "tty-web"
version = "0.16.0"
edition = "2024"
rust-version = "1.85"
description = "Web-based terminal emulator — opens a real PTY in the browser over WebSocket"
license-file = "LICENSE"
repository = "https://github.com/Alviner/tty-web"
homepage = "https://github.com/Alviner/tty-web"
documentation = "https://alviner.github.io/tty-web"
readme = "README.md"
keywords = ["terminal", "pty", "websocket", "tty", "web"]
categories = ["command-line-utilities", "web-programming::websocket"]
authors = ["Ivan Sitkin <alvinera@yandex.ru>"]
exclude = [
    "demo.gif",
    "docs/",
    ".github/",
    ".dockerignore",
    "Dockerfile",
    "Makefile",
]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
nix = { version = "0.31", features = ["term", "fs", "signal"] }
rust-embed = "8"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
